Implement HTTP request/response logging mechanism
This commit introduces a comprehensive logging system for HTTP requests and responses in the ASP.NET application. Key updates include:

- Updated namespace to `GlobalRequestLogger`.
- Enhanced HTML response generation.
- Replaced file logging with SQL Server database logging using a new `RequestLogger` class.
- Added connection string for database integration.
- Created SQL tables and stored procedures for logging.
- Updated `Web.config` to include necessary configurations.
- Improved error handling to log errors to the console.

These changes significantly improve the application's logging capabilities and data management.

--- a/GlobalRequestLogger/GlobalRequestLogger.csproj
+++ b/GlobalRequestLogger/GlobalRequestLogger.csproj
@@ -38,6 +38,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
@@ -55,6 +56,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="GlobalRequestLogger.pfx" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Scripts\Init.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
