Enhance WAF rule handling and logging capabilities
This commit introduces new functionality in the `GlobalLoggerModule.cs` to manage web application firewall (WAF) rules through the addition of `WafCondition` and `WafRule` classes. The module now fetches rules from a database and evaluates them against incoming requests, enabling actions like skipping, blocking, or challenging requests.

The `RequestLogger` service has been updated to log actions taken and server variables, enhancing request and response logging.

Additionally, the SQL initialization script (`Init.sql`) has been modified to add new columns in the `RequestLogs` and `ResponseLogs` tables, and stored procedures have been updated accordingly.

The project file (`GlobalRequestLogger.csproj`) has been updated to include the new model classes, ensuring they are compiled as part of the project.

These changes significantly improve the application's logging capabilities and traffic control based on configurable rules.

--- a/GlobalRequestLogger/GlobalRequestLogger.csproj
+++ b/GlobalRequestLogger/GlobalRequestLogger.csproj
@@ -51,6 +51,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GlobalLoggerModule.cs" />
+    <Compile Include="Models\WafCondition.cs" />
+    <Compile Include="Models\WafRule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\RequestLogger.cs" />
   </ItemGroup>
